fix provider icon alignment

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,6 +72,7 @@ a {
   height: 50px;
   width: 50px;
   margin-right: 10px;
+  align-content: center;
 }
 
 
